Fix design bug - container gets vertical gaps
Drawing container gets white gaps on top and
bottom vertically. Fixed by fixing vertical height
of container and removing flex grow. To adjust
spacing, used justify content on body as
space-between.

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   background: linear-gradient(to right, #fc5c7d, #6a82fb);
   height: 100%;
@@ -51,8 +52,8 @@ body {
   justify-content: center;
   align-items: center;
   width: 600px;
+  height: 600px;
   border: 1px solid white;
-  flex-grow: 1;
   background-color: white;
 }
 
